# cpp-cicd-demo

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
tests/: test_main.cpp
